# pwrstat-python-api

./: .gitignore  README.md  install.sh  openapi.json  pwrstat-api.service  pyproject.toml
src/pwrstat_api/: main.py  parser.py
tests/: test_api.py  test_parser.py
