[project]
name = "pwrstat-api"
version = "1.0.0"
description = "REST API wrapper for CyberPower pwrstat utility"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "slowapi>=0.1.9",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pwrstat_api"]

[project.scripts]
pwrstat-api = "pwrstat_api.main:run"

[dependency-groups]
dev = [
    "httpx>=0.27.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.9.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
    "S",   # flake8-bandit (security)
    "RUF", # ruff-specific rules
]
ignore = [
    "S603", # subprocess without shell=True — we intentionally avoid shell=True
    "S607", # partial executable path — binary path is a known constant
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = [
    "S101", # assert statements are fine in tests
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
